--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -1,27 +1,37 @@
 <div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span2">
-      <!--Sidebar content-->
-
-      Search: <input ng-model="query">
-      Sort by:
-      <select ng-model="orderProp">
-        <option value="name">Alphabetical</option>
-        <option value="age">Newest</option>
-      </select>
-
+    <div class="row-fluid">
+        <div class="span2">
+            <!-- todo: want better markup here -->
+            <a href="#" onclick="alert('bio');">bio</a>&nbsp;|&nbsp;
+            <a href="#" onclick="alert('mad skillz');">skillz</a>&nbsp;|&nbsp;
+            <a href="#" onclick="alert('gigs');">gigs</a>&nbsp;|&nbsp;
+            <a href="#" onclick="alert('snippets');">portfolio</a>
+        </div>
     </div>
-    <div class="span10">
-      <!--Body content-->
+    <div class="row-fluid">
+        <div class="span2">
+            <!--Sidebar content-->
 
-      <ul class="phones">
-        <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
-          <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
-          <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-          <p>{{phone.snippet}}</p>
-        </li>
-      </ul>
+            Search: <input ng-model="query">
+            Sort by:
+            <select ng-model="orderProp">
+                <option value="name">Alphabetical</option>
+                <option value="age">Newest</option>
+            </select>
 
+        </div>
+        <div class="span10">
+            <!--Body content-->
+
+            <ul class="phones">
+                <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
+                    <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
+                    <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
+
+                    <p>{{phone.snippet}}</p>
+                </li>
+            </ul>
+
+        </div>
     </div>
-  </div>
 </div>
