--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -1,24 +1,22 @@
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="span2">
-            <!-- todo: want better markup here -->
-            <a href="#" onclick="alert('bio');">bio</a>&nbsp;|&nbsp;
-            <a href="#" onclick="alert('mad skillz');">skillz</a>&nbsp;|&nbsp;
-            <a href="#" onclick="alert('gigs');">gigs</a>&nbsp;|&nbsp;
-            <a href="#" onclick="alert('snippets');">portfolio</a>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="span2">
-            <!--Sidebar content-->
-
-            Search: <input ng-model="query">
-            Sort by:
-            <select ng-model="orderProp">
-                <option value="name">Alphabetical</option>
-                <option value="age">Newest</option>
-            </select>
-
+        <div class="container span2">
+            <div>
+                <!-- todo: want better markup here -->
+                <a href="#" onclick="alert('bio');">bio</a>&nbsp;|&nbsp;
+                <a href="#" onclick="alert('mad skillz');">skillz</a>&nbsp;|&nbsp;
+                <a href="#" onclick="alert('gigs');">gigs</a>&nbsp;|&nbsp;
+                <a href="#" onclick="alert('snippets');">portfolio</a>
+            </div>
+            <div>
+                <!--Sidebar content-->
+                Search: <input ng-model="query">
+                Sort by:
+                <select ng-model="orderProp">
+                    <option value="name">Alphabetical</option>
+                    <option value="age">Newest</option>
+                </select>
+            </div>
         </div>
         <div class="span10">
             <!--Body content-->
