--- a/app/partials/gig-list.html
+++ b/app/partials/gig-list.html
@@ -1,28 +1,26 @@
 <div class="container-fluid">
     <div class="row-fluid">
+        <!--Sidebar content-->
         <div class="container span2">
             <div>
                 <!-- todo: want better markup here -->
                 <a href="#" onclick="alert('bio');">bio</a>&nbsp;|&nbsp;
-                <a href="#" onclick="alert('mad skillz');">skillz</a>&nbsp;|&nbsp;
-                <a>gigs</a>&nbsp;|&nbsp;
+                <a href="#/skills">skills</a>&nbsp;|&nbsp;
+                <a style="color:black;text-decoration:underline;">gigs</a>&nbsp;|&nbsp;
                 <a href="#" onclick="alert('snippets');">portfolio</a>
             </div>
             <div>
-                <!--Sidebar content-->
                 Search: <input ng-model="query">
                 <input type="hidden" ng-model="orderProp" value="Newest">
             </div>
         </div>
         <div class="span10">
             <!--Body content-->
-
             <ul class="skills">
-                <li ng-repeat="skill in skills | filter:query | orderBy:orderProp" class="thumbnail">
-                    <a href="#/skills/{{skill.id}}" class="thumb"><img ng-src="{{skill.imageUrl}}"></a>
-                    <a href="#/skills/{{skill.id}}">{{skill.name}}</a>
-
-                    <p>{{skill.snippet}}</p>
+                <li ng-repeat="gig in gigs | filter:query | orderBy:orderProp" class="thumbnail">
+                    <a href="#/gigs/{{gig.gigId}}" class="thumb">{{gig.title}}</a>
+                    <a href="#/gigs/{{gig.gigId}}">{{gig.employer}}</a>
+                    <p>{{gig.blurb}}</p>
                 </li>
             </ul>
 
