--- a/app/partials/gig-list.html
+++ b/app/partials/gig-list.html
@@ -1,8 +1,14 @@
 <div class="container-fluid">
+
+    <div class="row-fluid">
+        <!-- header -->
+        <h1>Jason Nerothin, M.S.</h1>
+    </div>
+
     <div class="row-fluid">
         <!--Sidebar content-->
-        <div class="container span2">
-            <div>
+        <div class="container span2" style="margin-top:1em;">
+            <div style="margin: 0 0 .75em .35em;">
                 <!-- todo: want better markup here -->
                 <a href="#" onclick="alert('bio');">bio</a>&nbsp;|&nbsp;
                 <a href="#/skills">skills</a>&nbsp;|&nbsp;
@@ -14,7 +20,8 @@
                 <input type="hidden" ng-model="orderProp" value="Newest">
             </div>
         </div>
-        <div class="span10">
+
+        <div class="span10" style="margin-top:1em;">
             <!--Body content-->
             <ul class="skills">
                 <li ng-repeat="gig in gigs | filter:query | orderBy:orderProp" class="thumbnail">
@@ -26,4 +33,21 @@
 
         </div>
     </div>
+
+    <!-- temporary hack until i get around to improving it -->
+    <div class="row-fluid" style="border-top: 1px solid gray; margin-bottom: 15px">
+        <a href="http://www.linkedin.com/in/jasonnerothin" style="margin-left:350px;">
+            <img src="http://www.linkedin.com/img/webpromo/btn_profile_greytxt_80x15.png" width="80" height="15" border="0" style="margin:3px 5px 0px 15px" alt="View Jason Nerothin's profile on LinkedIn">
+        </a>
+        <a href="http://www.facebook.com/jason.nerothin" title="Jason Nerothin">
+            <img src="http://badge.facebook.com/badge/1666973298.3198.931982756.png" style="border: 0px; margin:6px 28px 0px 16px" />
+        </a>
+        <a href="//plus.google.com/117461010737202575238?prsrc=3" rel="publisher" style="text-decoration:none; margin-right: 30px;">
+            <img src="//ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:22px;height:22px;"/>
+        </a>
+        <a href="http://twitter.com/jasonnerothin">
+            <img src="http://labs.creazy.net/twignature/img/jasonnerothin.gif" alt="twitter / jasonnerothin" />
+        </a>
+    </div>
+
 </div>
