--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8,9 +8,18 @@ body {
   list-style: none;
 }
 
+.mynav{
+    margin: 0 0 .75em .35em;
+}
+
+.socialbutts{
+    border-top: 1px solid gray;
+    margin-bottom: 15px;
+}
+
 .thumb {
   float: left;
-  margin: -1em 1em 1.5em 0em;
+  margin: -1em 1em 1.5em 0;
   padding-bottom: 1em;
   height: 100px;
   width: 100px;
