--- a/app/partials/skill-list.html
+++ b/app/partials/skill-list.html
@@ -4,43 +4,41 @@
         <h1>Jason Nerothin, M.S.</h1>
     </div>
 
+
     <div class="row-fluid">
         <!--Sidebar content-->
         <div class="container span2" style="margin-top:1em;">
-        <div style="margin: 0 0 .75em .35em;">
-        <!--Sidebar content-->
-            <div>
+            <div class="mynav">
                 <!-- todo: want better markup here -->
                 <a href="#" onclick="alert('bio');">bio</a>&nbsp;|&nbsp;
                 <a style="color:black; text-decoration:underline">skills</a>&nbsp;|&nbsp;
                 <a href="#/gigs">gigs</a>&nbsp;|&nbsp;
-                <a href="#" onclick="alert('snippets');">portfolio</a>
+                <a href="#" onclick="alert('snippets');">portfolio</a>&nbsp;|&nbsp;
+                <a href="#">edu</a>
             </div>
             <div>
                 Search: <input ng-model="query">
                 Sort by:
                 <select ng-model="orderProp">
-                    <option value="name">Alphabetical</option>
-                    <option value="recentness">Newest</option>
-                    <option value="experience">Experience</option>
+                    <option value="skillName">alphabetical</option>
+                    <option value="categories">categories</option>
                 </select>
             </div>
         </div>
-
+        <!--Body content-->
         <div class="span10" style="margin-top:1em;">
-            <!--Body content-->
-            <ul class="skills">
-                <li ng-repeat="skill in skills | filter:query | orderBy:orderProp">
-                    <a href="#/skills/{{skill.skillId}}">{{skill.skillName}}</a>
-                </li>
-            </ul>
-
+            <!--<ul class="skills">-->
+            <p ng-repeat="skill in skills | filter:query | orderBy:orderProp">
+                <a href="#/skills/{{skill.skillId}}">{{skill.skillName}}</a>
+                <span class="category" ng-repeat="category in skill.categories">{{category}}</span>
+            </p>
+            <!--</ul>-->
         </div>
     </div>
 
     <div style="float:left;clear:both;">&nbsp;</div>
     <!-- temporary hack until i get around to improving it -->
-    <div class="row-fluid" style="border-top: 1px solid gray; margin-bottom: 15px">
+    <div class="row-fluid,socialbutts">
         <a href="http://www.linkedin.com/in/jasonnerothin" style="margin-left:350px;">
             <img src="http://www.linkedin.com/img/webpromo/btn_profile_greytxt_80x15.png" width="80" height="15" border="0"
                  style="margin:3px 5px 0px 15px" alt="View Jason Nerothin's profile on LinkedIn">
