--- a/app/partials/skill-list.html
+++ b/app/partials/skill-list.html
@@ -2,6 +2,7 @@
 
     <div class="row-fluid">
         <h1>Jason Nerothin, M.S.</h1>
+        <h4>Under construction</h4>
     </div>
 
 
@@ -9,12 +10,11 @@
         <!--Sidebar content-->
         <div class="container span2" style="margin-top:1em;">
             <div class="mynav">
-                <!-- todo: want better markup here -->
-                <a href="#" onclick="alert('bio');">bio</a>&nbsp;|&nbsp;
-                <a style="color:black; text-decoration:underline">skills</a>&nbsp;|&nbsp;
+                <a href="#/bio">bio</a>&nbsp;|&nbsp;
+                <a href="#/skills" class="selected">skills</a>&nbsp;|&nbsp;
                 <a href="#/gigs">gigs</a>&nbsp;|&nbsp;
-                <a href="#" onclick="alert('snippets');">portfolio</a>&nbsp;|&nbsp;
-                <a href="#">edu</a>
+                <a href="#/portfolio">portfolio</a>&nbsp;|&nbsp;
+                <a href="#/edu">edu</a>
             </div>
             <div>
                 Search: <input ng-model="query">
