--- a/app/partials/skill-list.html
+++ b/app/partials/skill-list.html
@@ -1,59 +1,16 @@
-<div class="container-fluid">
+<div class="span10" style="margin-top:1em;" ng-controller="SkillListCtrl">
 
-    <div class="row-fluid">
-        <h1>Jason Nerothin, M.S.</h1>
-        <h4>Under construction</h4>
+    <div>
+        Search: <input ng-model="query">
+        Sort by:
+        <select ng-model="orderProp">
+            <option value="skillName">alphabetical</option>
+            <option value="categories">categories</option>
+        </select>
     </div>
 
-
-    <div class="row-fluid">
-        <!--Sidebar content-->
-        <div class="container span2" style="margin-top:1em;">
-            <div class="mynav">
-                <a href="#/bio">bio</a>&nbsp;|&nbsp;
-                <a href="#/skills" class="selected">skills</a>&nbsp;|&nbsp;
-                <a href="#/gigs">gigs</a>&nbsp;|&nbsp;
-                <a href="#/portfolio">portfolio</a>&nbsp;|&nbsp;
-                <a href="#/edu">edu</a>
-            </div>
-            <div>
-                Search: <input ng-model="query">
-                Sort by:
-                <select ng-model="orderProp">
-                    <option value="skillName">alphabetical</option>
-                    <option value="categories">categories</option>
-                </select>
-            </div>
-        </div>
-        <!--Body content-->
-        <div class="span10" style="margin-top:1em;">
-            <!--<ul class="skills">-->
-            <p ng-repeat="skill in skills | filter:query | orderBy:orderProp">
-                <a href="#/skills/{{skill.skillId}}">{{skill.skillName}}</a>
-                <span class="category" ng-repeat="category in skill.categories">{{category}}</span>
-            </p>
-            <!--</ul>-->
-        </div>
-    </div>
-
-    <div style="float:left;clear:both;">&nbsp;</div>
-    <!-- temporary hack until i get around to improving it -->
-    <div class="row-fluid,socialbutts">
-        <a href="http://www.linkedin.com/in/jasonnerothin" style="margin-left:350px;">
-            <img src="http://www.linkedin.com/img/webpromo/btn_profile_greytxt_80x15.png" width="80" height="15" border="0"
-                 style="margin:3px 5px 0px 15px" alt="View Jason Nerothin's profile on LinkedIn">
-        </a>
-        <a href="http://www.facebook.com/jason.nerothin" title="Jason Nerothin">
-            <img src="http://badge.facebook.com/badge/1666973298.3198.931982756.png"
-                 style="border: 0px; margin:6px 28px 0px 16px"/>
-        </a>
-        <a href="//plus.google.com/117461010737202575238?prsrc=3" rel="publisher"
-           style="text-decoration:none; margin-right: 30px;">
-            <img src="//ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:22px;height:22px;"/>
-        </a>
-        <a href="http://twitter.com/jasonnerothin">
-            <img src="http://labs.creazy.net/twignature/img/jasonnerothin.gif" alt="twitter / jasonnerothin"/>
-        </a>
-    </div>
-
+    <p ng-repeat="skill in skills | filter:query | orderBy:orderProp">
+        <a href="#/skills/{{skill.skillId}}">{{skill.skillName}}</a>
+        <span class="category" ng-repeat="category in skill.categories">{{category}}</span>
+    </p>
 </div>
