--- a/app/partials/gig-detail.html
+++ b/app/partials/gig-detail.html
@@ -1,5 +1,5 @@
 <h2>{{gig.title}} &mdash; {{gig.employer}}</h2>
-<h4>{{gig.address}} &nbsp; {{gig.startDate}} to {{gig.stopDate}}</h4>
+<h4>{{gig.address}} &nbsp; {{gig.startDate}} to {{gig.endDate}}</h4>
 
 <p>Description: {{gig.blurb}}</p>
 <p>Results: {{gig.results}}</p>
