--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,11 +1,32 @@
 /* app css stylesheet */
 
 body {
-  padding-top: 20px;
+    padding-top: 20px;
 }
 
 .skills {
-  list-style: none;
+    list-style: none;
+}
+
+.gigs{
+    list-style: none;
+}
+
+.gigs li{
+    float:left;
+    width:90%;
+    margin: 1em auto;
+    padding: 0.75em 1.5em;
+    border:1px dashed gray;
+}
+
+.gigskill{
+    padding:0.33em 0.7em;
+    margin:0.5em 0.5em 0.5em 0;
+}
+
+.gigskills{
+    margin-bottom:.5em;
 }
 
 .mynav{
@@ -22,75 +43,75 @@ body {
 }
 
 .thumb {
-  float: left;
-  margin: -1em 1em 1.5em 0;
-  padding-bottom: 1em;
-  height: 100px;
-  width: 100px;
+    float: left;
+    margin: -1em 1em 1.5em 0;
+    padding-bottom: 1em;
+    height: 100px;
+    width: 100px;
 }
 
 .skills li {
-  clear: both;
-  height: 100px;
-  padding-top: 15px;
+    clear: both;
+    height: 100px;
+    padding-top: 15px;
 }
 
 /** Detail View **/
 img.skill {
-  float: left;
-  border: 1px solid black;
-  margin-right: 3em;
-  margin-bottom: 2em;
-  background-color: white;
-  padding: 2em;
-  height: 400px;
-  width: 400px;
+    float: left;
+    border: 1px solid black;
+    margin-right: 3em;
+    margin-bottom: 2em;
+    background-color: white;
+    padding: 2em;
+    height: 400px;
+    width: 400px;
 }
 
 ul.skill-thumbs {
-  margin: 0;
-  list-style: none;
+    margin: 0;
+    list-style: none;
 }
 
 ul.skill-thumbs li {
-  border: 1px solid black;
-  display: inline-block;
-  margin: 1em;
-  background-color: white;
+    border: 1px solid black;
+    display: inline-block;
+    margin: 1em;
+    background-color: white;
 }
 
 ul.skill-thumbs img {
-  height: 100px;
-  width: 100px;
-  padding: 1em;
+    height: 100px;
+    width: 100px;
+    padding: 1em;
 }
 
 ul.skill-thumbs img:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 ul.specs {
-  clear: both;
-  margin: 0;
-  padding: 0;
-  list-style: none;
+    clear: both;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 ul.specs > li{
-  display: inline-block;
-  width: 200px;
-  vertical-align: top;
+    display: inline-block;
+    width: 200px;
+    vertical-align: top;
 }
 
 ul.specs > li > span{
-  font-weight: bold;
-  font-size: 1.2em;
+    font-weight: bold;
+    font-size: 1.2em;
 }
 
 ul.specs dt {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 h1 {
-  border-bottom: 1px solid gray;
+    border-bottom: 1px solid gray;
 }
