--- a/app/partials/gig-list.html
+++ b/app/partials/gig-list.html
@@ -18,7 +18,7 @@
             <div class="gigskills">
                 <a href="#/skills/{{skill}}" class="btn-success gigskill" ng-repeat="skill in gig.skills">{{skill}}</a>
             </div>
-            <a href="#/gigs/{{gig.gigId}}">Details&hellip;</a>
+            <a href="#/gigs/{{gig.gigId}}" class="btn-info detail">Details&nbsp;&hellip;</a>
         </li>
     </ul>
 </div>
