--- a/app/css/app.css
+++ b/app/css/app.css
@@ -21,12 +21,20 @@ body {
 }
 
 .gigskill{
-    padding:0.33em 0.7em;
-    margin:0.5em 0.5em 0.5em 0;
+    float:left;
+    margin:0.5em 0.5em 0 0;
+    padding:0.2em 0.7em;
 }
 
 .gigskills{
     margin-bottom:.5em;
+}
+
+.detail{
+    float:left;
+    clear:left;
+    margin-top:0.5em;
+    padding:0.2em 0.7em 0.2em 1.5em;
 }
 
 .mynav{
