--- a/app/partials/gig-list.html
+++ b/app/partials/gig-list.html
@@ -4,21 +4,21 @@
         Search gigs: <input ng-model="query" class="search-query">
     </div>
 
-
     <ul class="gigs">
         <li ng-repeat="gig in gigs | filter:query | orderBy:orderProp">
 
-            <a href="#/gigs/{{gig.gigId}}" class="gigTitle">{{gig.title}}</a>
-            <a href="{{gig.employerUrl}}" class="eUrl">{{gig.employer}}</a>
-            <a class="btn btn-primary results disabled"><i class="icon-hand-right icon-white"></i>{{gig.result}}</a>
-
-            <p class="fl cl">{{gig.cityState}}</p>
-            <p class="fl cl">
-                <span>{{gig.startDate}}&mdash;{{gig.endDate}}</span>
-            </p>
+            <div class="fl cl"><strong>{{gig.title}}</strong></div>
+            <a href="javascript:void(0);" onclick="popout('{{gig.employerUrl}}')" class="fl cl eUrl btn-link">{{gig.employer}}<i class="icon-share"></i></a>
+            <a class="btn btn-primary result disabled"><i class="icon-hand-right icon-white"></i>{{gig.result}}</a>
+            <div class="fl cl gigDate">
+                <!--<span class="fl cl muted">{{gig.cityState}}</span>-->
+                {{gig.startDate | date:'MMM y' }}&nbsp;&ndash;&nbsp;
+                <span ng-hide="isOverWith($index)">{{gig.endDate | date:'MMM y' }}</span>
+                <span ng-hide="!isOverWith($index)">present</span>
+            </div>
 
             <p class="fl lead blurb">{{gig.blurb}}</p>
-            <a href="#/gigs/{{gig.gigId}}" class="btn-info detail">Details&nbsp;&hellip;</a>
+            <a href="#/gigs/{{gig.gigId}}" class="btn-info btn-mini detail">More&nbsp;&hellip;</a>
 
             <div class="gigskills">
                 <a href="#/skills/{{skill}}" class="btn-success btn-mini gigskill" ng-repeat="skill in gig.skills"><i class="icon-star icon-white"></i>{{skill}}</a>
