Fixing up the edu page.

--- a/app/partials/edu.html
+++ b/app/partials/edu.html
@@ -1,5 +1,5 @@
 <div class="span10" style="margin-top:1em;">
-    <table>
+    <table class="table offset1" style="margin-top:3em">
         <thead>
             <tr>
                 <th>Degree</th>
