Updating portfolio page.

--- a/app/partials/portfolio.html
+++ b/app/partials/portfolio.html
@@ -1,3 +1,57 @@
 <div class="span10" style="margin-top:1em;">
-    <img src="../app/img/painting.jpg" alt="i didn't really paint this..."/>
+
+    <table class="table offset1" style="margin-top:3em;">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sentri7</td>
+                <td>SaaS solution that helps hospitals monitor clinically significant events.</td>
+                <td>
+                    <a href="javascript:void(0)" onclick="popout('http://www.sentri7.com')">http://www.sentri7.com</a>
+                </td>
+            </tr>
+            <tr>
+                <td>jasonnerothin.com</td>
+                <td>A shameless self-promotion site.</td>
+                <td>
+                    <a href="javascript:void(0)" onclick="popout('http://www.jasonnerothin.com')">http://www.jasonnerothin.com</a>
+                </td>
+            </tr>
+            <tr>
+                <td>DEVA</td>
+                <td>A desktop application for analyzing DNA microarray experiments.</td>
+                <td>
+                    <a href="javascript:void(0)" onclick="popout('http://www.nimblegen.com/products/software/deva/index.html')">http://www.nimblegen.com/products/software/deva/index.html</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Perfomance Claims</td>
+                <td>A SaaS application used by insurers and body shops.</td>
+                <td>
+                    <a href="javascript:void(0)" onclick="popout('http://www.pcxclaims.net')">http://www.pcsclaims.net</a>
+                </td>
+            </tr>
+            <tr>
+                <td>MIF curator</td>
+                <td>Only the code remains... A shadow of its former greatness.</td>
+                <td>
+                    <a href="javascript:void(0)" onclick="popout('http://code.google.com/p/mif-curator/')">http://code.google.com/p/mif-curator/</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Binding MOAD</td>
+                <td>A database front-end for biomolecular binding data.</td>
+                <td>
+                    <a href="javascript:void(0)" onclick="popout('http://bindingmoad.org')">http://bindingmoad.org/</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
 </div>
