--- a/app/css/app.css
+++ b/app/css/app.css
@@ -135,18 +135,25 @@ a.result {
     height: 300px;
     margin:1em 0.75em;
     padding:1em;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     border-top: 4px double black;
+    background-color: #f2f2f2;
 }
 
 a.skillgig {
     float:left;
     clear:left;
-    margin-top:0.5em;
 }
 
+div.categories div{
+    float:left;
+    clear:left;
+    font-weight: bold;
+    margin-bottom: 0.4em;
+}
 
-.categories {
+div.lilbit{
+    margin-top: 0.75em;
 }
 
 div.usedAt div{
@@ -158,6 +165,7 @@ div.usedAt div{
 .usedAt a {
     float: left;
     clear: both;
+    margin-bottom: 0.4em;
 }
 
 .infoLink{
