--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,6 +1,11 @@
 <div class="row-fluid" style="margin-top:3em;">
 
     <p>
+        Resume requests and contact info available upon request. I am currently available for new opportunities
+        beginning January 2013.
+    </p>
+
+    <p>
         Contact me <a href="mailto:jasonnerothin@gmail.com">here</a>.
     </p>
 
