--- a/app/partials/skill-detail.html
+++ b/app/partials/skill-detail.html
@@ -1,4 +1,7 @@
-<h1>{{skill.skillId}}</h1>
+
+
+<h2 class="row-fluid">{{skill.skillId}}</h2>
+<h4 class="uc">Under Construction</h4>
 
 <ul>
     <li>
