making contact page lead

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,4 +1,4 @@
-<div class="row-fluid" style="margin-top:3em;">
+<div class="row-fluid lead" style="margin-top:3em;">
 
     <p>
         Resume requests and contact info available upon request. I am currently available for new opportunities
